@@ -1,3 +1,9 @@
+2009-11-18  Tatsuya BIZENN  <bizenn@kahua.org>
+
+	* Change: dbd_mysqllib.stub, dbd_mysql.c, mysql_mysql.h,
+	          dbd/mysql.scm, test/dbd.scm
+	  add mysql-fetch-lengths.
+
 2009-11-17  Tatsuya BIZENN  <bizenn@kahua.org>
 
 	* Change: dbd_mysqllib.stub, dbd_mysql.c, dbd_mysql.h, dbd/mysql.scm
